<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile_icon"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aman Pandit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:id="@+id/branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ice"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_74xxxxxxxx"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aman_gmail_com"
        android:textColor="@android:color/white"
        tools:ignore="TextContrastCheck" />

</LinearLayout>