<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".log_reg.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/welcome_nto_nhelp_buddy"
        android:textColor="@color/blue"
        android:textSize="45sp"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/home_img"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:elevation="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_stroke"
        android:foreground="@drawable/ripple_grey"
        android:clickable="true"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/register"
        android:elevation="4dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/blue_stroke"
        android:foreground="@drawable/ripple_grey"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>