<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/edit_profile"
                android:textColor="@color/blue"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <!-- Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:text="@string/name_"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_box_selector"
                android:hint="@string/name_"
                android:inputType="textCapWords|textPersonName"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <!-- Branch -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:text="@string/branch"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/branchEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_box_selector"
                android:hint="@string/branch"
                android:inputType="textCapWords"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <!-- Mobile -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:text="@string/mobile_no"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_box_selector"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_box_selector"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="true"
                android:hint="@string/email"
                android:inputType="none"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/emailInfoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email_cannot_be_changed"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone"/>

            <!-- Update Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/white_stroke"
                android:text="@string/update_profile"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:outlineSpotShadowColor="@color/blue"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />

</FrameLayout>

