<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".log_reg.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_act"
        android:textColor="@color/blue"
        android:textSize="45sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_box_selector"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_grey"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_box_selector"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_grey"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/forgot_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="12sp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_stroke"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_grey"
        android:text="@string/login_act"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>